Cycles baking: Some operations do not "take" until edit mode is exited #47320

Closed
opened 2016-02-04 08:45:32 +01:00 by Thor Ekle · 10 comments

System Information
Windows 10, Nvidia GeForce GTX 780 Ti

Blender Version
Broken: 2.76b f337fea

Short description of error
Some operations such as UV editing and change of bake mode do not "take" until Edit mode is exited.

Exact steps for others to reproduce the error
• Start with the default scene and select the cube
• Assign a material to it that has an Image Texture node with a selected texture for output (so it can be used for baking)
• Hit Tab to enter edit mode, and mark seams on the cube
• Go to the UV editor, select all faces, and unwrap it
• Click Bake: The baked texture will not match the UV map but fill the enter texture

• Hit Tab to exit Edit mode and click Bake again: The baked texture now matches the UV map

Expected behavior: The baked texture should match the UV map without the need to exit Edit mode.

Also:

• Hit Tab to reenter Edit mode and move the UV map
• Click bake: The baked texture will not match the UV map
• Hit Tab to exit Edit mode and click Bake again: The baked texture now matches the UV map

Expected behavior: The baked texture should match the moved UV map without the need to exit Edit mode.

This apparently affects other, related operations as well:

• While in Edit mode, change the Bake mode to UV
• Click Bake: The texture is baked correctly
• Change the Bake mode back to Combined
• Click Bake: The is not baked correctly but still uses the previous mode (UV)
• Hit Tab to exit Edit mode
• Click Bake: The texture is baked correctly

Expected behavior: The baked texture should match the selected Bake mode without the need to exit Edit mode.

Note: This affects not only UV mode but several other Bake modes, such as Diffuse Color, Glossy Color, Normal, etc. I have not tested all modes.

**System Information** Windows 10, Nvidia GeForce GTX 780 Ti **Blender Version** Broken: 2.76b f337fea **Short description of error** Some operations such as UV editing and change of bake mode do not "take" until Edit mode is exited. **Exact steps for others to reproduce the error** • Start with the default scene and select the cube • Assign a material to it that has an Image Texture node with a selected texture for output (so it can be used for baking) • Hit Tab to enter edit mode, and mark seams on the cube • Go to the UV editor, select all faces, and unwrap it • Click Bake: The baked texture will not match the UV map but fill the enter texture • Hit Tab to exit Edit mode and click Bake again: The baked texture now matches the UV map Expected behavior: The baked texture should match the UV map without the need to exit Edit mode. Also: • Hit Tab to reenter Edit mode and move the UV map • Click bake: The baked texture will not match the UV map • Hit Tab to exit Edit mode and click Bake again: The baked texture now matches the UV map Expected behavior: The baked texture should match the moved UV map without the need to exit Edit mode. This apparently affects other, related operations as well: • While in Edit mode, change the Bake mode to UV • Click Bake: The texture is baked correctly • Change the Bake mode back to Combined • Click Bake: The is not baked correctly but still uses the previous mode (UV) • Hit Tab to exit Edit mode • Click Bake: The texture is baked correctly Expected behavior: The baked texture should match the selected Bake mode without the need to exit Edit mode. Note: This affects not only UV mode but several other Bake modes, such as Diffuse Color, Glossy Color, Normal, etc. I have not tested all modes.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thorie

Added subscriber: @thorie

Added subscribers: @Sergey, @dfelinto, @mont29

Added subscribers: @Sergey, @dfelinto, @mont29

Not quite sure this is normal behavior indeed… @dfelinto, @Sergey, thoughts?

Not quite sure this is normal behavior indeed… @dfelinto, @Sergey, thoughts?
Dalai Felinto was assigned by Bastien Montagne 2016-02-05 14:29:57 +01:00

The comment in code says we can't bake in edit mode, so guess it's just a know limitation.

The comment in code says `we can't bake in edit mode`, so guess it's just a know limitation.
Author

If baking is not supposed to be available in Edit mode, perhaps the Bake button should be disabled? However, it would be probably be a better solution if baking remains available and the reported issues are resolved. It would be a time saver and perhaps also more in keeping with Blender's overall UI philosophy?

If baking is not supposed to be available in Edit mode, perhaps the Bake button should be disabled? However, it would be probably be a better solution if baking remains available and the reported issues are resolved. It would be a time saver and perhaps also more in keeping with Blender's overall UI philosophy?

This issue was referenced by 3867bef904

This issue was referenced by 3867bef904d5b1fbe7ac6d0f5fc02c19033e2177

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

Baking should work in edit mode now, just like Cycles can also use updated meshes when doing viewport rendering in edit mode.

Baking should work in edit mode now, just like Cycles can also use updated meshes when doing viewport rendering in edit mode.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47320
No description provided.