Fix T47320: Cycles baking in edit mode uses outdated mesh.